--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-
+<center> <h4>Wyszukiwarka Dzieł w Muzeum</h4> </center>
     <div id="search" class="container text-center">
         <div class="row justify-content-md-center">
         
